[project]
name = "agent-tools"
version = "0.1.0"
description = "Agent tools library"
authors = [
    { name = "Yu Qiao", email = "yuqiao@example.com" }
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
pydantic = "^2.0"
click = "^8.0"

[project.scripts]
agent-tools = "agent_tools.cli:cli"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"